// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppComponent should create the app 1`] = `
<app-root
  __ngContext__="0"
  destroyedService$={[Function Subject]}
  title={[Function String]}
  wishlistItemsService={[Function Object]}
>
  <div
    class="app"
  >
    <header
      class="prometheus-header"
    >
      <section
        class="prometheus-header__content"
      >
        <header />
      </section>
    </header>
  </div><div
    class="app-content"
  >
    <router-outlet />
  </div>
</app-root>
`;

exports[`AppComponent should have as title 'prometheus-page' 1`] = `
<app-root
  __ngContext__={[Function Number]}
  destroyedService$={[Function Subject]}
  title={[Function String]}
  wishlistItemsService={[Function Object]}
>
  <div
    class="app"
  >
    <header
      class="prometheus-header"
    >
      <section
        class="prometheus-header__content"
      >
        <header />
      </section>
    </header>
  </div><div
    class="app-content"
  >
    <router-outlet />
  </div>
</app-root>
`;
